feat(funcionario): enhance `Funcionario` and related entities with new contract handling, mapping logic, and improved persistence models